# CHEHAB

./: .clang-format  .gitignore  CMakeLists.txt  operator_overloading  operator_overloading.cpp  polynomials_results.csv  results copy.csv  results.csv  results.txt  run_benchmarks.py  run_polynomials_benchmarks.py  run_temp.py  test  test.cpp
benchmarks/box_blur/: box_blur.cpp  box_blur_io_example.txt  generate_box_blur.py
benchmarks/cryptonets/: cryptonets.cpp  ml.cpp
benchmarks/dot_product/: dot_product.cpp  dot_product_io_example.txt
benchmarks/gx_kernel/: gx_kernel.cpp
benchmarks/gy_kernel/: gy_kernel.cpp
benchmarks/hamming_dist/: hamming_dist.cpp
benchmarks/l2_distance/: l2_distance.cpp
benchmarks/linear_reg/: linear_reg.cpp  linear_reg_checks .cpp
benchmarks/matrix_mul/: CMakeLists.txt  assignment_reduction.py  generate_cryptonets_tests.py  generate_matrix_mul_benchmarks.py  genrate_io_test.py  matrix_mul.cpp  matrix_mul_io_example.txt  test.py  w1.txt
benchmarks/poly_reg/: poly_reg.cpp
benchmarks/polynomials_coyote/: CMakeLists.txt  generate_box_blur.py  polynomials_coyote.cpp  polynomials_coyote_io_example.txt
benchmarks/roberts_cross/: roberts_cross.cpp
benchmarks/sobel/: sobel.cpp
egraphs/: Cargo.toml
egraphs/src/: extractor.rs  fhe_rules.rs  lib.rs  main.rs  rules.rs
src/fheco/: fheco.hpp
src/fheco/dsl/: CMakeLists.txt  ciphertext.cpp  ciphertext.hpp  common.cpp  common.hpp  compiler.cpp  compute.cpp  compute.hpp  expression.cpp  expression.hpp  input.cpp  input.hpp  ops_overloads.cpp  plaintext.cpp  tensor.hpp  var.cpp  var.hpp
(+14 files in other folders)
